--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-04-22T11:00:22.748Z",
-        "lastAccessed": "2025-04-22T11:00:22.748Z"
+        "creation": "2025-04-22T11:03:27.540Z",
+        "lastAccessed": "2025-04-22T11:03:27.540Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-22T11:00:22.748Z",
-        "lastAccessed": "2025-04-22T11:00:22.748Z"
+        "creation": "2025-04-22T11:03:27.540Z",
+        "lastAccessed": "2025-04-22T11:03:27.540Z"
     },
     {
         "key": "locale",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-22T11:00:22.748Z",
-        "lastAccessed": "2025-04-22T11:00:22.748Z"
+        "creation": "2025-04-22T11:03:27.540Z",
+        "lastAccessed": "2025-04-22T11:03:27.540Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-22T11:00:22.748Z",
-        "lastAccessed": "2025-04-22T11:00:22.748Z"
+        "creation": "2025-04-22T11:03:27.540Z",
+        "lastAccessed": "2025-04-22T11:03:27.540Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-22T11:00:22.748Z",
-        "lastAccessed": "2025-04-22T11:00:22.748Z"
+        "creation": "2025-04-22T11:03:27.540Z",
+        "lastAccessed": "2025-04-22T11:03:27.540Z"
     },
     {
         "key": "dpr",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-22T11:00:22.748Z",
-        "lastAccessed": "2025-04-22T11:00:22.748Z"
+        "creation": "2025-04-22T11:03:27.540Z",
+        "lastAccessed": "2025-04-22T11:03:27.540Z"
     },
     {
         "key": "datr",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-22T11:00:22.748Z",
-        "lastAccessed": "2025-04-22T11:00:22.748Z"
+        "creation": "2025-04-22T11:03:27.540Z",
+        "lastAccessed": "2025-04-22T11:03:27.540Z"
     },
     {
         "key": "c_user",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-22T11:00:22.748Z",
-        "lastAccessed": "2025-04-22T11:00:22.748Z"
+        "creation": "2025-04-22T11:03:27.540Z",
+        "lastAccessed": "2025-04-22T11:03:27.540Z"
     },
     {
         "key": "wd",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-22T11:00:22.748Z",
-        "lastAccessed": "2025-04-22T11:00:22.748Z"
+        "creation": "2025-04-22T11:03:27.540Z",
+        "lastAccessed": "2025-04-22T11:03:27.540Z"
     },
     {
         "key": "xs",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-22T11:00:22.748Z",
-        "lastAccessed": "2025-04-22T11:00:22.748Z"
+        "creation": "2025-04-22T11:03:27.540Z",
+        "lastAccessed": "2025-04-22T11:03:27.540Z"
     },
     {
         "key": "fr",
@@ -95,16 +95,16 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-22T11:00:22.748Z",
-        "lastAccessed": "2025-04-22T11:00:22.748Z"
+        "creation": "2025-04-22T11:03:27.540Z",
+        "lastAccessed": "2025-04-22T11:03:27.540Z"
     },
     {
         "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1745319619307%2C%22v%22%3A1%7D",
+        "value": "C%7B%22lm3%22%3A%22g.9580235082097148%22%2C%22t3%22%3A%5B%5D%2C%22utc3%22%3A1745319637892%2C%22v%22%3A1%7D",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-22T11:00:22.748Z",
-        "lastAccessed": "2025-04-22T11:00:22.748Z"
+        "creation": "2025-04-22T11:03:27.540Z",
+        "lastAccessed": "2025-04-22T11:03:27.540Z"
     }
 ]
