--- a/appstate.json
+++ b/appstate.json
@@ -1,110 +1,101 @@
 [
-    {
-        "key": "dbln",
-        "value": "%7B%2261555067162048%22%3A%22GlbCkVld%22%7D",
-        "domain": "facebook.com",
-        "path": "/login/device-based/",
-        "hostOnly": false,
-        "creation": "2025-04-22T11:03:27.540Z",
-        "lastAccessed": "2025-04-22T11:03:27.540Z"
-    },
-    {
-        "key": "sb",
-        "value": "52X7Z_4kR3K5jctbmp2B8DJE",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-22T11:03:27.540Z",
-        "lastAccessed": "2025-04-22T11:03:27.540Z"
-    },
-    {
-        "key": "locale",
-        "value": "vi_VN",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-22T11:03:27.540Z",
-        "lastAccessed": "2025-04-22T11:03:27.540Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-22T11:03:27.540Z",
-        "lastAccessed": "2025-04-22T11:03:27.540Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-22T11:03:27.540Z",
-        "lastAccessed": "2025-04-22T11:03:27.540Z"
-    },
-    {
-        "key": "dpr",
-        "value": "1.100000023841858",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-22T11:03:27.540Z",
-        "lastAccessed": "2025-04-22T11:03:27.540Z"
-    },
-    {
-        "key": "datr",
-        "value": "N7QEaPE5JA2NoLJa5Hvn6S6X",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-22T11:03:27.540Z",
-        "lastAccessed": "2025-04-22T11:03:27.540Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61555067162048",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-22T11:03:27.540Z",
-        "lastAccessed": "2025-04-22T11:03:27.540Z"
-    },
-    {
-        "key": "wd",
-        "value": "1745x866",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-22T11:03:27.540Z",
-        "lastAccessed": "2025-04-22T11:03:27.540Z"
-    },
-    {
-        "key": "xs",
-        "value": "33%3ARNAsLIneE29JdQ%3A2%3A1745143474%3A-1%3A6284%3A%3AAcWB6GKmTdHPk8zcvhEErLJmdXAa7u9pd3WX7AduZg",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-22T11:03:27.540Z",
-        "lastAccessed": "2025-04-22T11:03:27.540Z"
-    },
-    {
-        "key": "fr",
-        "value": "1M00ENpiHCaejTdZH.AWeaXoK3VCZETjALOGeNCC7Ae9UUDSlfS3Y0yL_M7KGoIsh_ILc.BoB3ZX..AAA.0.0.BoB3a-.AWfpsuAC5J2sDJrOMw4yFgcGlgs",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-22T11:03:27.540Z",
-        "lastAccessed": "2025-04-22T11:03:27.540Z"
-    },
-    {
-        "key": "presence",
-        "value": "C%7B%22lm3%22%3A%22g.9580235082097148%22%2C%22t3%22%3A%5B%5D%2C%22utc3%22%3A1745319637892%2C%22v%22%3A1%7D",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-22T11:03:27.540Z",
-        "lastAccessed": "2025-04-22T11:03:27.540Z"
-    }
+	{
+		"key": "dbln",
+		"value": "%7B%22100094324782308%22%3A%22FjCCKjnW%22%7D",
+		"domain": "facebook.com",
+		"path": "/login/device-based/",
+		"hostOnly": false,
+		"creation": "2025-04-22T11:23:15.234Z",
+		"lastAccessed": "2025-04-22T11:23:15.234Z"
+	},
+	{
+		"key": "datr",
+		"value": "QskEaKeUU_nid_Nhj7QzMrNg",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-22T11:23:15.234Z",
+		"lastAccessed": "2025-04-22T11:23:15.234Z"
+	},
+	{
+		"key": "sb",
+		"value": "QskEaAVIWn4F76TMDKNSY71w",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-22T11:23:15.234Z",
+		"lastAccessed": "2025-04-22T11:23:15.234Z"
+	},
+	{
+		"key": "ps_l",
+		"value": "1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-22T11:23:15.234Z",
+		"lastAccessed": "2025-04-22T11:23:15.234Z"
+	},
+	{
+		"key": "ps_n",
+		"value": "1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-22T11:23:15.234Z",
+		"lastAccessed": "2025-04-22T11:23:15.234Z"
+	},
+	{
+		"key": "locale",
+		"value": "vi_VN",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-22T11:23:15.234Z",
+		"lastAccessed": "2025-04-22T11:23:15.234Z"
+	},
+	{
+		"key": "wd",
+		"value": "1920x953",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-22T11:23:15.234Z",
+		"lastAccessed": "2025-04-22T11:23:15.234Z"
+	},
+	{
+		"key": "c_user",
+		"value": "100094324782308",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-22T11:23:15.234Z",
+		"lastAccessed": "2025-04-22T11:23:15.234Z"
+	},
+	{
+		"key": "xs",
+		"value": "4%3A6lLNHL-V03ZFeQ%3A2%3A1745320043%3A-1%3A2583",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-22T11:23:15.234Z",
+		"lastAccessed": "2025-04-22T11:23:15.234Z"
+	},
+	{
+		"key": "fr",
+		"value": "1wOOiDiKDcMenne4j.AWcMq7PTPyzHSYD0c0xLkyoTOhx71UUVso3Mp9hJkDpwE-4vj-Y.BoB3M7..AAA.0.0.BoB3uo.AWdX3g9cIT8LwPU1J7rtDctEFkM",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-22T11:23:15.234Z",
+		"lastAccessed": "2025-04-22T11:23:15.234Z"
+	},
+	{
+		"key": "presence",
+		"value": "C%7B%22lm3%22%3A%22g.9580235082097148%22%2C%22t3%22%3A%5B%7B%22o%22%3A0%2C%22i%22%3A%22g.9866579163392072%22%7D%5D%2C%22utc3%22%3A1745320980698%2C%22v%22%3A1%7D",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-22T11:23:15.234Z",
+		"lastAccessed": "2025-04-22T11:23:15.234Z"
+	}
 ]
